fix: back button alignment

--- a/src/styles/Extn-CustomSnippets.less
+++ b/src/styles/Extn-CustomSnippets.less
@@ -79,7 +79,7 @@
 
 .custom-snippet-btn .back-btn-left-icon {
     position: relative;
-    top: 1px;
+    top: 0.6px;
     margin-right: 4px;
 }
 
